# dis-bootloader

./: Cargo.toml  README.md  memory.x  rust-toolchain.toml  rust-toolchain.toml.disabled
.cargo/: config.toml
.github/workflows/: build.yml
bootloader/: Cargo.toml  build.rs  memory.x
bootloader/src/: flash.rs  main.rs
shared/: Cargo.toml
shared/src/: flash_addresses.rs  lib.rs  linker_flash_addresses.rs  state.rs  std_compat_flash_addresses.rs
src/: flash.rs  flash_addresses.rs  lib.rs  main.rs  reset_reason.rs  state.rs
