[package]
name = "dis-bootloader"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cortex-m = { version = "0.7.3" }
cortex-m-rt = "0.7.1"
rtt-target = { version = "0.3.1", features = ["cortex-m"] }
nrf9160-pac = "0.10.1"
num_enum = { version = "0.5.1", default-features = false }

[profile.release]
debug = true
lto = true
