[package]
name = "dis-bootloader"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cortex-m = { version = "0.7.3" }
cortex-m-rt = "0.7.1"
nrf9160-pac = "0.10.1"
num_enum = { version = "0.5.1", default-features = false }
arrayvec = { version = "0.7.2", default-features = false }

panic-persist = "0.3.0"

embassy = { version = "0.1.0", git = "https://github.com/embassy-rs/embassy.git", features = [] }
embassy-traits = { version = "0.1.0", git = "https://github.com/embassy-rs/embassy.git", features = [] }
embassy-nrf = { version = "0.1.0", git = "https://github.com/embassy-rs/embassy.git", features = ["nrf9160-s", "unstable-pac"] }

[features]
default = ["feather"]

logistics = []
mobility = []
feather = []

[profile.release]
debug = true
lto = true
